# routes/api/PostRouter.ts
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { CustomIRouter } from "@interfaces/routes.interface";
 import passport from "passport";
-import { get_get_all_posts, get_posts_by_user, get_get_post_by_id, post_create_post, put_add_comments, put_add_likes } from "@controllers/postController";
+import { get_get_all_posts, get_posts_by_user, get_get_post_by_id, post_create_post, put_add_comments, put_like_post, delete_delete_comment, delete_unlike_post } from "@controllers/postController";
 
 
 const postRouter: CustomIRouter = Router();
@@ -16,6 +16,10 @@ postRouter.get('/:id', passport.authenticate('jwt', { session: false }), get_get
 
 postRouter.put('/:id/add_comment', passport.authenticate('jwt', { session: false }), put_add_comments);
 
-postRouter.put('/:id/add_like', passport.authenticate('jwt', { session: false }), put_add_likes);
+postRouter.put('/:id/like_post', passport.authenticate('jwt', { session: false }), put_like_post);
+
+postRouter.delete('/:id/delete_comment/:commentId', passport.authenticate('jwt', { session: false }), delete_delete_comment);
+
+postRouter.delete('/:id/unlike_post', passport.authenticate('jwt', { session: false }), delete_unlike_post);
 
 export default postRouter;
